--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,10 @@ main{
   height: 100vh;
 }
 
+section:nth-child(1){
+
+}
+
 section:nth-child(2){
   border: 1px solid red;
   margin-left: 20px;
@@ -44,7 +48,53 @@ h1 {
   background-repeat: no-repeat;
 
 }
-#blue{
+
+.logoBadge{
+  display: flex;
+  justify-content: space-between;
+}
+
+.logoBadge button {
+outline: none;
+display: flex;
+align-items: center;
+width: 80px;
+color: white;
+height: 40px;
+background: #1c5380;
+}
+
+.logoBadge > img {
+  width: 30vw;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  margin-top: -100px;
+}
+
+footer ul {
+  display: flex;
+  justify-content: space-evenly;
+  min-width: 500px;
+  list-style-type: none;
+ 
+  font-size: 10px;
+}
+
+
+footer ul a {
+  text-decoration: none;
+  color: #06365f;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+#last {
+  color: grey
+}
+/*#blue{
   background: #06365f;
   height: 33vh;
-} 
+} */
